--- a/index.html
+++ b/index.html
@@ -9,14 +9,30 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- Remix icon -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+
     <!-- Mine -->
-    <link rel=3"stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="bg-dark">
 
-    
-    
+    <main>
+        <section class="first_section container py-5">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="text-white text-center">Carousel</h1>
+                </div>
+            </div>
+        </section>
 
+        <section class="second_section my_carousel container w-50 position-relative">
+            <div class="my_items py-5">
+            </div>
+            <i id="nextBtn" class="ri-arrow-up-circle-fill position-absolute fs-4 top-0 start-50"></i>
+            <i id="previousBtn" class="ri-arrow-down-circle-fill position-absolute fs-4 bottom-0 start-50"></i>
+        </section>
+    </main>
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
